# dungeonmind-llm-rpg-adventure

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  style_checks.yml
backend/: constants.py  llm-backend-config.yaml
backend/orchestrator/: main.py  models.py  services.py
frontend/static/css/: style.css
frontend/static/js/: script.js
frontend/templates/: index.html
src/: constants.py  utils.py
src/backend/: constants.py  llm-backend-config.yaml  llm-services-config.yaml  utils.py
src/backend/database/: config.py  init_db.py  models.py  populate_db.py
src/backend/game_dynamics/: campaign_creation.py  character_creation.py  game_state_manager.py
src/backend/orchestrator/: main.py  models.py  services.py
src/backend/orchestrator/routes/: character.py
src/frontend/: app.py
src/frontend/static/css/: character.css  index.css
src/frontend/static/js/: character.js  index.js
src/frontend/templates/: character.html  index.html
src/scrapers/: items.py  middlewares.py  pipelines.py  settings.py
src/scrapers/spiders/: forgotten_realms.py
tests/: utils.py
tests/backend/game_dynamics/: character_creation_tests.yaml  test_character_creation.py
