[project]
name = "dungeonmind-llm-rpg-adventure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "flask>=3.1.0",
    "numpy>=2.2.2",
    "openai>=1.60.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "isort>=6.0.0",
    "jupyterlab>=4.3.4",
    "pre-commit>=4.1.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E266", "F407"]
